# HPC

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
demos/: demo_simd.cc  demo_taskflow.cc  demo_tasks.cc  simd_timings.cc  timing_mem.cc
src/: parallelcomputingtf.cc  parallelcomputingtf.h  simd.h  simd_arm64.h  simd_avx.h  taskmanager.cc  taskmanager.h  timer.cc  timer.h
